<resources>
    <string name="app_name">LibraryApp</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="register_btn">Sign up</string>
    <string name="login_btn">Sign in</string>
    <string name="all_books_btn">All books</string>
    <string name="add_book_menu_btn">Add Book</string>
    <string name="title_placeholder">Title</string>
    <string name="description_placeholder">Description</string>
    <string name="comment_placeholder">Comment</string>
    <string name="rating_placeholder">Rating (from 1 to 5)</string>
    <string name="save_btn">Save</string>
    <string name="choose_img_btn">Pick book image</string>
</resources>