<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.AddBookActivity">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginBottom="81dp"
        android:text="@string/save_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingText" />

    <EditText
        android:id="@+id/tileText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="69dp"
        android:ems="10"
        android:hint="@string/title_placeholder"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/descriptionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="72dp"
        android:ems="10"
        android:hint="@string/description_placeholder"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/commentText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tileText" />

    <EditText
        android:id="@+id/commentText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="91dp"
        android:ems="10"
        android:hint="@string/comment_placeholder"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/ratingText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

    <EditText
        android:id="@+id/ratingText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="101dp"
        android:ems="10"
        android:hint="@string/rating_placeholder"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentText" />

</androidx.constraintlayout.widget.ConstraintLayout>